# oss-repo-template

./: index.md
labs/lab-01/: report.md
labs/lab-02/: Lab2.md
labs/lab-03/: Report.md  wiki.md
labs/lab-04/: Lab4.md
labs/lab-05/: lab5.md
labs/lab-05/Lab-BuildSystemsExample/: CMakeLists.txt
labs/lab-05/Lab-BuildSystemsExample/makefilebuild/: dynamic_block  makefile
labs/lab-05/Step1/: CMakeLists.txt  tutorial.cxx
labs/lab-05/Step2/: CMakeLists.txt  tutorial.cxx
labs/lab-05/Step4/: CMakeLists.txt
labs/lab-05/Step5/: tutorial.cxx
labs/lab-05/Step5/MathFunctions/: CMakeLists.txt
